Actualizo diseño y contenido para GitHub Pages

--- a/index.html
+++ b/index.html
@@ -2,41 +2,35 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Estudios | Jesús El Árbol de la Vida</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/estilos.css">
+    <meta name="description" content="Estudios Bíblicos - Jesús El Árbol de la Vida">
+    <title>Jesús El Árbol de la Vida - Inicio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="home-page">
 
-<header class="hero">
-    <img src="logo.png" alt="Jesús El Árbol de la Vida" class="logo">
+    <div class="container">
+        <header>
+            <div class="logo-placeholder" role="img" aria-label="Logo Renacer">
+                <span class="logo-texto">Renacer</span>
+            </div>
+            <h1 class="titulo-principal">Estudios Bíblicos<br>Jesús el Árbol de la Vida</h1>
+        </header>
 
-    <h1>Estudios<br>
-        <span>Jesús · El Árbol de la Vida</span>
-    </h1>
+        <main>
+            <section class="versiculo-container">
+                <p class="versiculo-texto">
+                    "Al que venciere, le daré a comer del árbol de la vida, el cual está en medio del paraíso de Dios."
+                </p>
+                <cite class="versiculo-cita">— Apocalipsis 2:7</cite>
+            </section>
 
-    <p class="versiculo">
-        “Al que venciere, le daré a comer del árbol de la vida,
-        el cual está en medio del paraíso de Dios.”
-        <br><strong>Apocalipsis 2:7</strong>
-    </p>
-</header>
-
-<main class="panel">
-
-    <a href="estudios.html" class="card">
-        📖
-        <h2>Estudios Bíblicos</h2>
-        <p>Clases organizadas por libro y capítulo.</p>
-    </a>
-
-</main>
-
-<footer class="footer">
-    Jesús · El Árbol de la Vida — Plataforma de Estudios
-</footer>
+            <div class="botones-container">
+                <a href="clases.html" class="btn-3d-dorado">EMPEZAR CLASES</a>
+                <a href="metodo.html" class="btn-3d-dorado">MÉTODO DE ESTUDIO</a>
+            </div>
+        </main>
+    </div>
 
 </body>
 </html>
